Instalação - Biblioteca | Script

--- a/feitos.html
+++ b/feitos.html
@@ -3,20 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Procedimentos</title>
-
-  <!--
-    IMPORTANTE: EXECUTAR O COMANDO
-
-
-    * BOOTSTRAP FRAMEWORK -
-
-    -> Instalação:
-        #comando: npm install bootstrap
-    -> Como integrar ao projeto:
-        #
-  -->
-
+  <title>Documentação </title>
   <link rel="stylesheet" href="estilo.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
@@ -59,11 +46,30 @@
           </tr>
 
         </tbody>
-      </table>
+      </table> 
     </div>
   </div>
+
   <div class="container">
-    Criação e configuração do arquivo login.js, junto com a importação dos pacotes instalados
+    <ul>
+      <div class="text-center pt-3 mb-3"> 
+        <span class=""> COMMIT 02 </span>
+      </div>
+      <span class="lead"> Criação e configuração do arquivo src/server.ts junto com a importação dos pacotes instalados</span>
+      <li>Importa a biblioteca Express </li>
+      <li>Criar Rotas </li>
+      <li>Setar a Porta da Aplicação </li>
+    </ul>
+
+    <ul>
+      <span class="lead"> Instalação - Biblioteca | Script</span>
+      <li>Biblioteca @types: npm install @types/express -D</li>
+      <li>Biblioteca ts-node: npm install ts-node -D - Para executar código typeScript</li>
+      <li>Biblioteca typeScript: npm install typescript -D</li>
+      <li>Biblioteca ts-node-dev: npm install ts-node-dev -D - Detecta alterações no código automáticamente</li>
+      <li>Script de execução: "dev": "ts-node-dev src/server.ts" - Executar o comando npm run dev para executar o APP </li>
+    </ul>
   </div>
+
 </body>
 </html>
