Criação do Projeto em React

--- a/feitos.html
+++ b/feitos.html
@@ -71,5 +71,13 @@
     </ul>
   </div>
 
+  <div class="container text-center">
+    <span> COMMIT 03 </span>
+    
+    <ul> Criação do Projeto em React 
+      <li>Biblioteca para criar o template do REACT: npx create-react-app app --template=typescrip </li>
+    </ul>      
+  </div>
+
 </body>
 </html>
