Configuração de Rotas | Conexão com Banco de dados | Script para criar o banco de dados

--- a/feitos.html
+++ b/feitos.html
@@ -79,5 +79,70 @@
     </ul>      
   </div>
 
+  <div class="container mt-5 text-center">
+    <h2>Commit 04</h2>
+    
+    <div class="">
+      <table class="table table-striped table-dark mt-3" >
+        <thead class="text-center">
+          <tr>
+            <th scope="col">Pasta | Arquivo | Biblioteca</th>
+            <th scope="col">Comando</th>
+            <th scope="col">Objetivo</th>
+          </tr>
+        </thead>
+        
+        <tbody class="text-center">
+          <tr>
+            <th scope="row">src/router.ts</th>
+            <td>Novo Arquivo</td>
+            <td>Criação das Rotas da Aplicação</td>
+          </tr>
+
+          <tr>
+            <th scope="row">src/database</th>
+            <td>Nova Pasta</td>
+            <td>Criação das Rotas da Aplicação</td>
+          </tr>
+        </tbody>        
+
+        <tr>
+          <th scope="row">knex</th>
+          <td>npm install knex</td>
+          <td>Escrever Querys do banco de dados usando o JS</td>
+        </tr>
+
+        <tr>
+          <th scope="row">src/database/connection</th>
+          <td>nova pasta/arquivo</td>
+          <td>Contém as configurações de conexão com o banco de dados</td>
+        </tr>
+
+        <tr>
+          <th scope="row">sqlite</th>
+          <td>npm install sqlite3</td>
+          <td>dependencia do Sqlite para conexão com o banco de dados</td>
+        </tr>
+
+        <tr>
+          <th scope="row">src/database/migrations</th>
+          <td>Tabelas do banco de dados</td>
+          <td> Configurações para criar as tableas | aributos </td>
+        </tr>
+
+        <tr>
+          <th scope="row">knexfile.ts</th>
+          <td>arquivo de configuração</td>
+          <td>Configurações para criação do Banco | Tableas | Abributos</td>
+        </tr>
+
+        <tr>
+          <th scope="row">knexfile.ts</th>
+          <td>npx knex migrate:latest --knexfile knexfile.ts migrate:latest</td>
+          <td> Executar o banco de dados</td>
+        </tr>
+      </table> 
+    </div>
+  </div>
 </body>
 </html>
