--- a/feitos.html
+++ b/feitos.html
@@ -144,5 +144,36 @@
       </table> 
     </div>
   </div>
+  <div class="container mt-5 text-center">
+    <h2>Commit 04</h2>
+    
+    <div class="">
+      <table class="table table-striped table-dark mt-3" >
+        <thead class="text-center">
+          <tr>
+            <th scope="col">Pasta | Arquivo | Biblioteca</th>
+            <th scope="col">Comando | Ação</th>
+            <th scope="col">Objetivo</th>
+          </tr>
+        </thead>
+        
+        <tbody class="text-center">
+          <tr>
+            <th scope="row">src/database/seeds/create_items.ts</th>
+            <td>Novo Arquivo | Cadastrar Items</td>
+            <td>Cadastra os Items pré Carregados pela aplicação</td>
+          </tr>
+
+          <tr>
+            <th scope="row">server/uploads</th>
+            <td>Novo Arquivo | imagems dos Items</td>
+            <td>Armazenas as imagens dos items</td>
+          </tr>
+
+        </tbody>
+      </table> 
+    </div>
+  </div>
+
 </body>
 </html>
