--- a/feitos.html
+++ b/feitos.html
@@ -238,5 +238,30 @@
     </div>
   </div>
 
+  <div class="container mt-5 text-center">
+    <h2>Commit 07</h2>
+    
+    <div class="">
+      <table class="table table-striped table-dark mt-3" >
+        <thead class="text-center">
+          <tr>
+            <th scope="col">Pasta | Arquivo | Biblioteca</th>
+            <th scope="col">Comando | Ação</th>
+            <th scope="col">Objetivo</th>
+          </tr>
+        </thead>
+        
+        <tbody class="text-center">     
+
+          <tr>
+            <th scope="row"> Controlador dos Pontas de Coleta </th>
+            <td> PointsController </td>
+            <td> Criando Inserção e Buscas</td>
+          </tr>
+        </tbody>
+      </table> 
+    </div>
+  </div>
+
 </body>
 </html>
