--- a/feitos.html
+++ b/feitos.html
@@ -256,12 +256,45 @@
           <tr>
             <th scope="row"> Controlador dos Pontas de Coleta </th>
             <td> PointsController </td>
-            <td> Criando Inserção e Buscas</td>
+            <td> Criando Inserção e Buscas no PointsController</td>
           </tr>
         </tbody>
       </table> 
     </div>
   </div>
+
+  <div class="container mt-5 text-center">
+    <h2>Commit 08</h2>
+    
+    <div class="">
+      <table class="table table-striped table-dark mt-3" >
+        <thead class="text-center">
+          <tr>
+            <th scope="col">Pasta | Arquivo | Biblioteca</th>
+            <th scope="col">Comando | Ação</th>
+            <th scope="col">Objetivo</th>
+          </tr>
+        </thead>
+        
+        <tbody class="text-center">     
+
+          <tr>
+            <th scope="row"> Biblioteca CORS </th>
+            <td> npm install cors | SERVER</td>
+            <td> Implementar a Biblioteca CORS no arquivo SERVER.JS</td>
+          </tr>
+
+          <tr>
+            <th scope="row"> -- </th>
+            <td> Deixar Imagem Padrão no momento da criação de um ponto</td>
+            <td> Implementar a alteração na Controller.Creater</td>
+          </tr>
+
+        </tbody>
+      </table> 
+    </div>
+  </div>
+
 
 </body>
 </html>
