--- a/feitos.html
+++ b/feitos.html
@@ -287,7 +287,39 @@
           <tr>
             <th scope="row"> -- </th>
             <td> Deixar Imagem Padrão no momento da criação de um ponto</td>
-            <td> Implementar a alteração na Controller.Creater</td>
+            <td> Implementar a alteração  na Controller.Creater</td>
+          </tr>
+
+        </tbody>
+      </table> 
+    </div>
+  </div>
+
+  <div class="container mt-5 text-center">
+    <h2>Commit 09</h2>
+    
+    <div class="">
+      <table class="table table-striped table-dark mt-3" >
+        <thead class="text-center">
+          <tr>
+            <th scope="col">Pasta | Arquivo | Biblioteca</th>
+            <th scope="col">Comando | Ação</th>
+            <th scope="col">Objetivo</th>
+          </tr>
+        </thead>
+        
+        <tbody class="text-center">     
+
+          <tr>
+            <th scope="row">Reinstalação do Projeto React </th>
+            <td> npx create-react-app web --template=typescript | WEB</td>
+            <td> Criar o projeto em React</td>
+          </tr>
+
+          <tr>
+            <th scope="row"> Limpando Projeto </th>
+            <td> sub Diretórios da pasta WEB</td>
+            <td> Retirar arquivos que não serão utilizados</td>
           </tr>
 
         </tbody>
