--- a/feitos.html
+++ b/feitos.html
@@ -497,7 +497,32 @@
           <tr>
             <th scope="row">Buscar items de coletas na IP </th>
             <td> web/src/services</td>
-            <td>Buscar items de coletas na IP</td>
+            <td>Buscar items de coletas na API</td>
+          </tr>
+
+        </tbody>
+      </table> 
+    </div>
+  </div>
+
+  <div class="container mt-5 text-center">
+    <h2>Commit 14</h2>
+    
+    <div class="">
+      <table class="table table-striped table-dark mt-3" >
+        <thead class="text-center">
+          <tr>
+            <th scope="col">Comando | Ação</th>
+            <th scope="col">Pasta | Arquivo | Biblioteca</th>
+            <th scope="col">Objetivo</th>
+          </tr>
+        </thead>
+        
+        <tbody class="text-center">  
+          <tr>
+            <th scope="row"> Cidades e Estados - API do IBGE </th>
+            <td> configurar conexão </td>
+            <td> Buscar cidades e estados da api do IBGE</td>
           </tr>
 
         </tbody>
