--- a/feitos.html
+++ b/feitos.html
@@ -529,5 +529,37 @@
       </table> 
     </div>
   </div>
+
+  <div class="container mt-5 text-center">
+    <h2>Commit 15</h2>
+    
+    <div class="">
+      <table class="table table-striped table-dark mt-3" >
+        <thead class="text-center">
+          <tr>
+            <th scope="col">Comando | Ação</th>
+            <th scope="col">Pasta | Arquivo | Biblioteca</th>
+            <th scope="col">Objetivo</th>
+          </tr>
+        </thead>
+        
+        <tbody class="text-center">  
+          <tr>
+            <th scope="row"> Salvar Localidade via Mapa </th>
+            <td>  </td>
+            <td> Anotar a posição que o usuário escolher no mapa</td>
+          </tr>
+
+          <tr>
+            <th scope="row"> Salvar Localidade via Mapa </th>
+            <td>  </td>
+            <td> Carregar a posição atual no map automaticamente</td>
+          </tr>
+
+        </tbody>
+      </table> 
+    </div>
+  </div>
+
 </body>
 </html>
