--- a/feitos.html
+++ b/feitos.html
@@ -561,5 +561,30 @@
     </div>
   </div>
 
+  <div class="container mt-5 text-center">
+    <h2>Commit 16</h2>
+    
+    <div class="">
+      <table class="table table-striped table-dark mt-3" >
+        <thead class="text-center">
+          <tr>
+            <th scope="col">Comando | Ação</th>
+            <th scope="col">Pasta | Arquivo | Biblioteca</th>
+            <th scope="col">Objetivo</th>
+          </tr>
+        </thead>
+        
+        <tbody class="text-center">  
+          <tr>
+            <th scope="row">Cadastrar Ponto de Coleta </th>
+            <td>  -- </td>
+            <td> Cadastrar o ponto de coleta criado pelo usuário</td>
+          </tr>
+        </tbody>
+      </table> 
+    </div>
+  </div>
+
+
 </body>
 </html>
