--- a/feitos.html
+++ b/feitos.html
@@ -586,5 +586,36 @@
   </div>
 
 
+  <div class="container mt-5 text-center">
+    <h2>Commit 17</h2>
+    
+    <div class="">
+      <table class="table table-striped table-dark mt-3" >
+        <thead class="text-center">
+          <tr>
+            <th scope="col">Comando | Ação</th>
+            <th scope="col">Pasta | Arquivo | Biblioteca</th>
+            <th scope="col">Objetivo</th>
+          </tr>
+        </thead>
+        
+        <tbody class="text-center">  
+          <tr>
+            <th scope="row">Instalar o CLI - Mobille </th>
+            <td>  npm install -g expo-cli</td>
+            <td> Instalar o Expo de forma global</td>
+          </tr>
+
+          <tr>
+            <th scope="row">Iniciar o projeto mobile com o explo-cli </th>
+            <td>  expo init mobile</td>
+            <td> Criar a pasta e dpendnecias do projeto mobile</td>
+          </tr>
+        </tbody>
+      </table> 
+    </div>
+  </div>
+
+
 </body>
 </html>
