--- a/feitos.html
+++ b/feitos.html
@@ -616,6 +616,47 @@
     </div>
   </div>
 
+  <div class="container mt-5 text-center">
+    <h2>Commit 18</h2>
+    
+    <div class="">
+      <table class="table table-striped table-dark mt-3" >
+        <thead class="text-center">
+          <tr>
+            <th scope="col">Comando | Ação</th>
+            <th scope="col">Pasta | Arquivo | Biblioteca</th>
+            <th scope="col">Objetivo</th>
+          </tr>
+        </thead>
+        
+        <tbody class="text-center">  
+          <tr>
+            <th scope="row">Instalar Fontes - Mobille </th>
+            <td>  npm install expo-font @expo-google-fonts/ubunto @expo-google-fonts/roboto</td>
+            <td> instalar fontes atraves do expo</td>
+          </tr>
+
+          <tr>
+            <th scope="row">Iniciar o projeto mobile com o explo-cli </th>
+            <td>  expo init mobile</td>
+            <td> Criar a pasta e dpendnecias do projeto mobile</td>
+          </tr>
+
+          <tr>
+            <th scope="row">Pagina Home </th>
+            <td>  mobile/src/home</td>
+            <td> Implementação da Página Home</td>
+          </tr>
+
+          <tr>
+            <th scope="row">Navegação entre páginas </th>
+            <td>  npm install @react-navigation/native</td>
+            <td> Implementação do navigation para navegação entre páginas</td>
+          </tr>
+        </tbody>
+      </table> 
+    </div>
+  </div>
 
 </body>
 </html>
