--- a/feitos.html
+++ b/feitos.html
@@ -652,5 +652,29 @@
     </div>
   </div>
 
+  <div class="container mt-5 text-center">
+    <h2> Commit 21</h2>
+    
+    <div class="">
+      <table class="table table-striped table-dark mt-3" >
+        <thead class="text-center">
+          <tr>
+            <th scope="col">Comando | Ação</th>
+            <th scope="col">Pasta | Arquivo | Biblioteca</th>
+            <th scope="col">Objetivo</th>
+          </tr>
+        </thead>
+        
+        <tbody class="text-center">  
+          <tr>
+            <th scope="row"> Erros nos Commits Fontes - Mobille </th>
+            <td> Commit 18 | 19 | 20 </td>
+            <td> Não fez upload dos arquivos do projeto mobile</td>
+          </tr>
+        </tbody>
+      </table> 
+    </div>
+  </div>
+
 </body>
 </html>
