Implementação da página de detalhes

--- a/feitos.html
+++ b/feitos.html
@@ -717,7 +717,7 @@
           <tr>
             <th scope="row"> Criação Pagina de Pontos de Coleta </th>
             <td> src/pages/points </td>
-            <td> Implementar do mapa e dos objetos de coleta</td>
+            <td> Implementação do mapa e dos objetos de coleta</td>
           </tr>
         </tbody>
       </table> 
